<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="24dp"
    android:paddingTop="74dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewMale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/cardviewFemale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_male"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/title_text" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewFemale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardviewMale"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_female"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/title_text" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardviewMale">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/textHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 cm"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewWeight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/cardviewAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardviewHeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/textWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_subtract" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_plus" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewAge"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardviewWeight"
        app:layout_constraintTop_toBottomOf="@id/cardviewHeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/textAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_subtract" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_plus" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/calculate"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardviewAge" />

</androidx.constraintlayout.widget.ConstraintLayout>